2013-09-08  vaiorabbit  <vaiorabbit@twitter.com>

	* opengl_ext_command.rb, opengl_ext_enum.rb, opengl_ext.rb: Added for OpenGL extension support.
	* sample/report_env.rb: Reports the names of supported extensions.

2013-09-07  vaiorabbit  <vaiorabbit@twitter.com>

	* opengl_command.rb: Updated using latest gl.xml.
	* opengl_command.rb: Fixed some bugs.
	* opengl_command.rb, glu.rb (load_dll): Updated platform detection.
	* sample/report_env.rb : Added.
	* opengl_common.rb (check_extension): Added.

2013-09-05  vaiorabbit  <vaiorabbit@twitter.com>

	* sample/ComputeShader: Added.

2013-09-03  vaiorabbit  <vaiorabbit@twitter.com>

	* opengl_platform.rb, opengl_windows.rb: Added.

2013-08-28  vaiorabbit  <vaiorabbit@twitter.com>

	* glu.rb: Added.

2013-08-28  vaiorabbit  <vaiorabbit@twitter.com>

	* (Announce) First release.
