@@ -1,0 +1,3 @@
+*   Ref.: NV Path Rendering
+    *   https://developer.nvidia.com/nv-path-rendering
+    *   http://developer.download.nvidia.com/assets/gamedev/files/NVprSDK.zip
