@@ -2,6 +2,7 @@
 
 	* opengl_ext_command.rb, opengl_ext_enum.rb, opengl_ext.rb: Added for OpenGL extension support.
 	* sample/report_env.rb: Reports the names of supported extensions.
+	* sample/Extension/nvpr_hello_world.rb: Added.
 
 2013-09-07  vaiorabbit  <vaiorabbit@twitter.com>
 
